--- a/css/superhero.css
+++ b/css/superhero.css
@@ -1,6 +1,25 @@
+@font-face {
+  font-family: UNCHeadings;
+  src: url('fonts/Arvo-Regular.ttf');
+}
+
+@font-face {
+  font-family: UNCFooter;
+  src: url('fonts/OpenSans.ttf');
+}
+
+* {
+  font-family: UNCHeadings;
+}
+
+h1 {
+  font-family: UNCFooter;
+}
+
 img {
   height: 100px;
 }
+
 table, th {
   border: 3px solid pink;
   border-collapse: collapse;
@@ -8,11 +27,13 @@ table, th {
   padding-left: 10px;
   text-align: center;
 }
+
 td {
   border: 1px dotted pink;
   padding-left: 5px;
   padding-left: 5px;
 }
+
 #headerrow {
   background-color: lightskyblue
 }
