--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,6 @@ h1 {
     font-size: 40px;
 }
 
-img {
-
+p, li {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
