--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ h1 {
     font-size: 40px;
 }
 
-p, li {
+p {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+img {
+    border-radius: 20px;
 }
