--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -8,13 +8,10 @@ h1 {
     text-align: center;
 }
 
-h2 {
+h1, h2, li, ul {
     text-align: center;
 }
 
-p {
-    text-align: center;
-}
 
 img {
     width: 10vw;
