--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -6,6 +6,7 @@ h1 {
     color: purple;
     font-size: 3vw;
     text-align: center;
+    font-family: lucida handwriting;
 }
 
 img {
@@ -18,5 +19,5 @@ p, li {
 }
 
 h2 {
-    font-family: lucida handwriting;
+    font-family: papyrus;
 }
