--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -7,6 +7,11 @@
     src: url('fonts/Licorice.ttf');
   }
 
+@font-face {
+    font-family: paragraph;
+    src: url('fonts/OpenSans.ttf');
+  }
+
 h1 {
     color: purple;
     font-size: 3vw;
@@ -20,7 +25,7 @@ img {
 }
 
 p, li {
-    font-family: courier new;
+    font-family: paragraph;
 }
 
 nav, h2 {
