--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -6,7 +6,7 @@ h1 {
     color: purple;
     font-size: 3vw;
     text-align: center;
-    font-family: brush script mj;
+    font-family: papyrus;
 }
 
 img {
