--- a/css/superhero.css
+++ b/css/superhero.css
@@ -17,21 +17,23 @@ h1 {
 }
 
 img {
-  height: 100px;
+  height: 50px;
 }
 
 table, th {
   border: 3px solid pink;
   border-collapse: collapse;
-  padding-left: 10px;
-  padding-left: 10px;
+  padding-left: 5px;
+  padding-left: 5px;
   text-align: center;
+  font-size: 1.5vw;
 }
 
 td {
   border: 1px dotted pink;
   padding-left: 5px;
   padding-left: 5px;
+  font-size: 1.5vw;
 }
 
 #headerrow {
