--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-
-a:hover, li:hover, img:hover {
+a:hover, li:hover {
     color: rgb(211, 30, 228);
 }
 
@@ -20,10 +19,9 @@ h2 {
 }
 
 img {
-    border-radius: 30%;
+    border-radius: 35%;
     opacity: 0.9;
     object-position: 15% 100%;
-    text-align: center;
 
 }
 
@@ -36,6 +34,11 @@ h3 {
 }
 
 h1 {
-    color: gray
+    color: gray;
 }
+
+* {
+    background-color: rgb(197, 196, 196)
+}
+
 
